# dev-env-copilot

./: .gitignore  DEPLOYMENT_SETUP.md  DISTRIBUTION_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_SETUP_GUIDE.md  DOCKER_VSCODE_INTEGRATION.md  Dockerfile  GITHUB_ACTIONS_RESEARCH.md  INSTALLATION.md  INTEGRATION_GUIDE.md  LICENSE  MARKETPLACE_PUBLISHING_GUIDE.md  README.md  USAGE.md  VSCODE_INSIDERS_MCP_SETUP.md  VSCODE_MARKETPLACE_READY.md  debug_npm.py  docker-compose.yml  global_settings_to_add.json  package.json  pyproject.toml  requirements.txt  setup.py  setup_package.py  test_environment.py  test_environment_clean.py  test_final.py  test_mcp_server.py  vscode-mcp-config.json
.github/workflows/: deploy-npm.yml  deploy-pypi.yml  docker-deploy.yml  publish-extension.yml  test-and-build.yml
docs/: DEVENV_USAGE_GUIDE.md  DISTRIBUTION_SUMMARY.md  GLOBAL_CONTEXT_IMPLEMENTATION.md  GLOBAL_CONTEXT_INJECTION.md  INTEGRATION_GUIDE.md  PROJECT_COMPLETION.md  VSCODE_EXTENSION_PUBLISHING.md  VSCODE_INTEGRATION_SUMMARY.md
examples/: MCP_INTEGRATION.md  vscode_docker_compose_settings.json  vscode_docker_persistent_settings.json  vscode_docker_settings.json  vscode_docker_volume.json  vscode_docker_windows.json  vscode_docker_windows_settings.json  vscode_global_settings.json  vscode_tasks_docker.json  vscode_tasks_docker_enhanced.json
src/dev_environment_mcp/: __init__.py  __main__.py  mcp_server.py  server.py
test-workspace/: Dockerfile  README.md  index.js  package.json  requirements.txt
tests/: test_installation.py  test_mcp_proper.py  test_mcp_server.py  test_mcp_simple.py  test_vscode_docker.py  test_vscode_integration.py  test_wrapper.js
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  create-icon-simple.js  create-icon.js  package-lock.json  package.json
vscode-extension/src/: extension.ts
vscode-extension/src/test/: runTest.ts
vscode-extension/src/test/suite/: extension.test.ts  index.ts
