[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-env-copilot"
version = "1.0.0"
description = "MCP server for development environment detection and command syntax assistance"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "development", "environment", "copilot", "vscode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: System :: System Shells",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx",
    "pydantic>=2.7.0",
    "typer",
    "rich",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy",
]

[project.scripts]
dev-env-copilot = "dev_environment_mcp.mcp_server:main"
dev-env-copilot-server = "dev_environment_mcp.mcp_server:main"

[project.urls]
Homepage = "https://github.com/0nilinkz/dev-env-copilot"
Repository = "https://github.com/0nilinkz/dev-env-copilot"
Issues = "https://github.com/0nilinkz/dev-env-copilot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dev_environment_mcp = ["*.json", "*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
